# OntheFly

./: .gitignore  MANIFEST.in  README.md  layout.txt  package-lock.json  package.json  pyproject.toml
examples/: against_SOTA.py  cO2_example.py  elnino_example.py  examples.txt  examples_results.txt  macrodata_example.py  nile_example.py  passengers_example.py  sp_example.py  stock_example.py  sunspots_example.py  theory_test.py  train_with_seamless.py
experiments/onthefly_theory/: config.py  device.py  run_all.py  warnings.py
experiments/onthefly_theory/aggregate/: fdr.py  formatters.py
experiments/onthefly_theory/data/: tabular.py  time_series.py  (+1 more)
src/: architecture.txt
src/onthefly/: __init__.py  control.py  data_explorer.py  feature_worker.py  runtime_metrics.py  session.py  trainer.py
src/onthefly_backend/: __init__.py  control.py  data_explorer.py  merging.py  snapshots.py  utils.py
src/seamless_modeldev/: __init__.py  checkpoints.py  control.py  data_explorer.py  feature_worker.py  merging.py  session.py  snapshots.py  utils.py
src/seamless_modeldev.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
vscode-onthefly/: .vscodeignore  LICENSE.txt  README.md  architecture.txt  layout.txt  package-lock.json  package.json
vscode-onthefly/docs/: README.md  activation_and_panel.md  extension_architecture.md  ipc_and_state.md  storage_and_bundles.md  webview_dashboard.md
vscode-onthefly/src/: extension.ts  storage.ts
vscode-seamless/: layout.txt  package-lock.json  package.json  tsconfig.json
vscode-seamless/src/: extension.ts  storage.ts
(+56 files in other folders)
