[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seamless-modeldev"
version = "0.0.1"
description = "Local-first, VS Code-driven model development: pause, rewind, fork, merge, and explore data manifolds."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{ name = "You", email = "you@example.com" }]
dependencies = [
  "torch>=2.0.0",
  "numpy>=1.23",
  "scipy>=1.10",
]

[project.optional-dependencies]
explorer = ["scikit-learn>=1.3", "umap-learn>=0.5"]  # optional data explorer
dev = ["ipython", "pytest", "ruff", "mypy"]

[tool.setuptools.packages.find]
where = ["src"]
